Made backward searches work a lot better.

BUG: 123307
BUG: 130252

svn path=/branches/KDE/3.5/kdelibs/; revision=559493